--- a/app/src/main/res/layout/activity_new_tricount.xml
+++ b/app/src/main/res/layout/activity_new_tricount.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Models.NewTricount">
+    tools:context=".NewTricount">
 
     <EditText
         android:id="@+id/titre"
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toTopOf="@+id/participantNom" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/ButtonValidate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
